<resources>
    <string name="app_name">GymPal</string>
    <string name="action_settings">Settings</string>
    
    <!-- Authentication -->
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    
    <!-- Navigation -->
    <string name="home">Home</string>
    <string name="calculators">Calculators</string>
    <string name="tracking">Tracking</string>
    <string name="coach">AI Coach</string>
    <string name="profile">Profile</string>
    
    <!-- Dashboard -->
    <string name="welcome">Welcome, %1$s!</string>
    <string name="today_stats">Today\'s Stats</string>
    <string name="steps">Steps</string>
    <string name="calories">Calories</string>
    <string name="water">Water</string>
    <string name="workouts">Workouts</string>
    
    <!-- Calculators -->
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="bmr_calculator">BMR Calculator</string>
    <string name="calorie_calculator">Calorie Calculator</string>
    <string name="protein_calculator">Protein Calculator</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    
    <!-- Tracking -->
    <string name="track_water">Track Water</string>
    <string name="track_food">Track Food</string>
    <string name="track_workout">Track Workout</string>
    <string name="track_steps">Track Steps</string>
    <string name="add">Add</string>
    <string name="ml">ml</string>
    <string name="glasses">Glasses</string>
    <string name="add_food">Add Food</string>
    <string name="food_name">Food Name</string>
    <string name="portion_size">Portion Size</string>
    <string name="protein">Protein (g)</string>
    <string name="carbs">Carbs (g)</string>
    <string name="fat">Fat (g)</string>
    <string name="food">Food</string>
    
    <!-- AI Coach -->
    <string name="ask_coach">Ask your AI Coach</string>
    <string name="coach_intro">Hi! I\'m your AI fitness coach. How can I help you today?</string>
    <string name="type_message">Type a message..</string>
    <string name="send">Send</string>
    
    <!-- Placeholders -->
    <string name="next">Next</string>

    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet..</string>

    <!-- New String Resource -->
    <string name="workout_type_icon">Workout type icon</string>


</resources>





